# DeepLearning-EEG-Pipeline

./: .flake8  .gitignore  README.md  config.yaml  create_sample_data.py  demo.yaml  download_tuh_eeg.sh  environment.yml  pyproject.toml  requirements.txt  run_demo.sh
.github/workflows/: flake8.yml  pytest.yml
configs/: baseline.yaml  baseline_smoke.yaml  demo.yaml
jobs/: download_tuh_eeg.sh  process_tuh.sh  train_baseline.sh  train_baseline_debug.sh
outputs/demo/: best.pt
results/: data_exploration.txt  processing_summary.md
scripts/: create_sample_data.py  data_explore.py  run_demo.sh
src/eeg_cnn_lstm/models/: model_b.py  train_b.py
src/eeg_cnn_lstm/preprocessing/: data_explore.py  debug_filter_check.py  preprocessing.py
src/eeg_cnn_lstm/utils/: dataset.py
src/preprocessing/: preprocessing.py
src/utils/: dataset.py  metrics.py
tests/: test_placeholder.py  test_preprocess.py  test_sample_data.py  tests_preprocess.py
