[project]
name = "eeg-cnn-lstm"
dynamic = ["version"]
description = "EEG abnormality classification using CNN-LSTM"
readme = "README.md"
requires-python = ">=3.11"
keywords = []
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
dependencies = [                  # CHANGED: removed black, flake8, pytest — those are dev only
    "numpy<2",
    "torch",
    "mne",
    "scipy",
    "matplotlib",
    "loguru",
    "scikit-learn",
    "pyyaml"
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "flake8",
    "pytest",
    "pyedflib",
]

[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/eeg_cnn_lstm/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]